--- a/index2.html
+++ b/index2.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset=:"utf-8">
-	<title>Untitled</title>
+	<title>Cascading Boxes</title>
 	<link rel="stylesheet" type="text/css" href="http://cdnjs.cloudfare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="main2.css">
 </head>
 <body>
 		
-		<div class="boxblue"> 
-			<div class="boxgreen"> </div>
-			<div class="boxred"> </div>
-		</div>
-
+		<div class="boxblue"> </div>
+		<div class="boxgreen"> </div>
+		<div class="boxred"> </div>
+		
+		
 
 </body>
 
